# Hermit

./: Ideation.md  README.md  TODO
backend/: Cargo.toml
backend/src/: main.rs  zk.rs
contract-code/: hardhat.config.js  helper-hardhat-config.js  package.json
contract-code/deploy/: 00_deploy.js
smpc/: Cargo.toml
smpc/cordinator/: Cargo.toml
smpc/cordinator/src/: main.rs
smpc/src/: lib.rs  mpc.rs  vm.rs
smpc/src/math/: mersenne.rs  mod.rs
smpc/src/network/: mod.rs
smpc/src/utils/: mod.rs  prg.rs  shamir.rs
smpc/tests/: mersenne_test.rs  mpc_test.rs  prg_test.rs
ui/: .gitignore  config.ts  package-lock.json  package.json  tailwind.config.ts
ui/app/: fonts.ts  globals.css  home.module.css  layout.tsx  page.tsx  providers.tsx
ui/app/api/add-user/: route.ts
ui/app/api/get-logged-in-user/: route.ts
ui/app/api/logout/: route.ts
ui/app/collaborate/: function.ts  layout.tsx  page.tsx
ui/app/components/icons/: mail.tsx  right-arrow.tsx  user.tsx  wallet.tsx
ui/app/components/navbar/: navbar.tsx  profile.tsx
ui/app/lib/db/: redis.ts
ui/app/lib/ipfs/: upload.ts
ui/app/register/: page.tsx
ui/app/sign-in/: layout.tsx  page.tsx
zk/: Cargo.toml
zk/src/: main.rs  zk.rs
