[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
num-bigint = { version = '0.4', features = ["rand"] }
rand = " 0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
digest = "0.9.0"
sha2 = "0.9.5"
num-traits = "0.2.14"
