[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
num-bigint = { version = '0.4', features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
digest = "0.9.0"
bellman = "0.14.0"
pairing = "0.18.0"
ff = "0.8.0"
rand = "0.8"
bls12_381 = "0.8.0"

[[bin]]
name = "zk1"
path = "src/zk.rs"
